<resources>
    <string name="app_name">Tailor App</string>
    <string name="e_mail">E-mail</string>
    <string name="title_activity_myshopmain">Myshopmain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="rupees">₹ </string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="username">Username</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="products">Products</string>
    <string name="services">Services</string>
    <string name="customer">Customer</string>
    <string name="report">Reports</string>
    <string name="marketplace">MarketPlace</string>
    <string name="partners">Partners</string>
    <string name="settings">Shop Settings</string>
    <string name="refund">Refund Policy</string>
    <string name="logout">Log Out</string>
    <string name="my_shop">My Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttons">Buttons</string>
    <string name="men_s_wear">Men\'s Wear</string>
    <string name="women_s_wear">Women\'s Wear</string>
    <string name="kids_wear">Kid\'s Wear</string>
    <string name="view_more">+ View More</string>
    <string name="title_activity_product_details">ProductDetails</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="add_to_cart">Add to CArt</string>
    <string name="material">Material: Fabric \nOther Details: Details \nSome Care: Care</string>
    <string name="material_care"><![CDATA[Material & Care]]></string>

    <string name="country_prompt">Choose a country</string>
    <string name="categories">Categories</string>
    <string name="my_orders">My Orders</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="facebook_app_id">2954817314775992</string>
    <string name="fb_login_protocol_scheme">fb2954817314775992</string>
    <string name="customization">Customization</string>
    <string name="bespoke">BeSpoke</string>
    <string name="embellishment">Embellishment</string>
</resources>