<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_slideshow">

    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.tailorapp.nav.ui.order.OrderFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_products"
        android:name="com.example.tailorapp.nav.ui.gallery.ProductsFragment"
        android:label="@string/products"
        tools:layout="@layout/fragment_produts" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.tailorapp.nav.ui.slideshow.SlideshowFragment"
        android:label= "@string/my_shop"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_market_place"
        android:name="com.example.tailorapp.nav.marketplace.MarketPlace_fragment"
        android:label="@string/marketplace"
        tools:layout="@layout/fragment_market_place_fragment" />
</navigation>