<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/content_main_fragment"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <!--   Footer -->

<!--    <ImageView-->
<!--        android:id="@+id/imageView3"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="3dp"-->
<!--        android:layout_marginBottom="72dp"-->
<!--        android:src="@drawable/line"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998"
        app:navGraph="@navigation/mobile_navigation" />
    <!--        app:defaultNavHost="true"-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/market_place_button"
                android:layout_width="48dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:contentDescription="@string/marketplace"
                app:srcCompat="@drawable/marketplace" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/marketplace"
                android:textColor="@color/black"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/order_button"
                android:layout_width="48dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:contentDescription="@string/orders"
                app:srcCompat="@drawable/orders" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/orders"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/my_shop_button"
                android:layout_width="48dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:contentDescription="@string/my_shop"
                app:srcCompat="@drawable/myshop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/my_shop"
                android:textColor="@color/black"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/partners_button"
                android:layout_width="48dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:contentDescription="@string/partners"
                app:srcCompat="@drawable/partners" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/partners"
                android:textColor="@color/black"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/report_button"
                android:layout_width="48dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:contentDescription="@string/report"
                app:srcCompat="@drawable/report" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/report"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>